--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나만의 단어 해설집</title>
 
+    <link rel="manifest" href="./manifest.json">
+
     <link rel="icon" type="image/png" href="/app-icon.png?v=1" sizes="192x192">
     <link rel="apple-touch-icon" href="/app-icon.png?v=1">
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -591,4 +593,5 @@
     </script>
 </body>
 </html>
+
 
