--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB1YKFHTLG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TB1YKFHTLG');
+    </script>
+    <meta charset="UTF-8">
+    <title>나만의 단어장</title>
+    ...
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나만의 단어 해설집</title>
@@ -593,5 +604,6 @@
     </script>
 </body>
 </html>
+
 
 
